syntax = "proto3";
package seiprotocol.seichain.tokenfactory;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "seiprotocol/seichain/tokenfactory/authorityMetadata.proto"; 
import "seiprotocol/seichain/tokenfactory/params.proto"; 

option go_package = "github.com/sei-protocol/sei-chain/x/tokenfactory/types";

// Query defines the gRPC querier service.
service Query {
  // Params defines a gRPC query method that returns the tokenfactory module's
  // parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/tokenfactory/params";
  }

  // DenomAuthorityMetadata defines a gRPC query method for fetching
  // DenomAuthorityMetadata for a particular denom.
  rpc DenomAuthorityMetadata(QueryDenomAuthorityMetadataRequest)
      returns (QueryDenomAuthorityMetadataResponse) {
    option (google.api.http).get =
        "/sei-protocol/seichain/tokenfactory/denoms/{denom}/authority_metadata";
  }

  // DenomsFromCreator defines a gRPC query method for fetching all
  // denominations created by a specific admin/creator.
  rpc DenomsFromCreator(QueryDenomsFromCreatorRequest)
      returns (QueryDenomsFromCreatorResponse) {
    option (google.api.http).get =
        "/sei-protocol/seichain/tokenfactory/denoms_from_creator/{creator}";
  }

  // DenomCreationFeeWhitelist defines a gRPC query method for fetching all
  // creators who are whitelisted from paying the denom creation fee.
  rpc DenomCreationFeeWhitelist(QueryDenomCreationFeeWhitelistRequest)
      returns (QueryDenomCreationFeeWhitelistResponse) {
    option (google.api.http).get =
        "/sei-protocol/seichain/tokenfactory/denom_creation_fee_whitelist";
  }

  // CreatorInDenomFeeWhitelist defines a gRPC query method for fetching
  // whether a creator is whitelisted from denom creation fees.
  rpc CreatorInDenomFeeWhitelist(QueryCreatorInDenomFeeWhitelistRequest)
      returns (QueryCreatorInDenomFeeWhitelistResponse) {
    option (google.api.http).get =
        "/sei-protocol/seichain/tokenfactory/denom_creation_fee_whitelist/{creator}";
  }
  
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryDenomAuthorityMetadataRequest defines the request structure for the
// DenomAuthorityMetadata gRPC query.
message QueryDenomAuthorityMetadataRequest {
  string denom = 1 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
}

// QueryDenomAuthorityMetadataResponse defines the response structure for the
// DenomAuthorityMetadata gRPC query.
message QueryDenomAuthorityMetadataResponse {
  DenomAuthorityMetadata authority_metadata = 1 [
    (gogoproto.moretags) = "yaml:\"authority_metadata\"",
    (gogoproto.nullable) = false
  ];
}

// QueryDenomsFromCreatorRequest defines the request structure for the
// DenomsFromCreator gRPC query.
message QueryDenomsFromCreatorRequest {
  string creator = 1 [ (gogoproto.moretags) = "yaml:\"creator\"" ];
}

// QueryDenomsFromCreatorRequest defines the response structure for the
// DenomsFromCreator gRPC query.
message QueryDenomsFromCreatorResponse {
  repeated string denoms = 1 [ (gogoproto.moretags) = "yaml:\"denoms\"" ];
}

// QueryDenomCreationFeeWhitelistRequest defines the request structure for the
// DenomCreationFeeWhitelist gRPC query.
message QueryDenomCreationFeeWhitelistRequest {}

// QueryDenomCreationFeeWhitelistResponse defines the response structure for the
// DenomsFromCreator gRPC query.
message QueryDenomCreationFeeWhitelistResponse {
  repeated string creators = 1 [ (gogoproto.moretags) = "yaml:\"creators\"" ];
}

// QueryCreatorInDenomFeeWhitelistRequest defines the request structure for the
// CreatorInDenomFeeWhitelist gRPC query.
message QueryCreatorInDenomFeeWhitelistRequest {
  string creator = 1 [ (gogoproto.moretags) = "yaml:\"creator\"" ];
}

// QueryCreatorInDenomFeeWhitelistResponse defines the response structure for the
// CreatorInDenomFeeWhitelist gRPC query.
message QueryCreatorInDenomFeeWhitelistResponse {
  bool whitelisted = 1 [ (gogoproto.moretags) = "yaml:\"whitelisted\"" ];
}
